fix: 折叠器（collapse）箭头显示异常 Close: #10564

--- a/packages/amis-ui/scss/components/_collapse.scss
+++ b/packages/amis-ui/scss/components/_collapse.scss
@@ -125,7 +125,10 @@
     transform: rotate(var(--collapse-icon-rotate));
   }
 
-  &--title-bottom.is-active &-arrow {
+  &--title-bottom.is-active
+    > .#{$ns}Collapse-header
+    > .#{$ns}Collapse-arrow-wrap
+    > &-arrow {
     top: 0;
     transform: rotate(calc(-1 * var(--collapse-icon-rotate)));
   }
